--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
             <version>10.2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>5.5.0</version>
+        </dependency>
     </dependencies>
 
 </project>
