--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,11 @@
             <version>2.13.1</version>
         </dependency>
 
+        <!--   delete after finished   -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.12</version>
-            <scope>provided</scope>
         </dependency>
 
         <!--json util-->
@@ -57,6 +57,13 @@
             <artifactId>jna</artifactId>
             <version>5.5.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.6.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
