--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
             <version>5.6.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.3</version>
+        </dependency>
+
     </dependencies>
 
 </project>
