--- a/pom.xml
+++ b/pom.xml
@@ -11,59 +11,65 @@
         <java.version>11</java.version>
         <maven.compiler.target>11</maven.compiler.target>
         <maven.compiler.source>11</maven.compiler.source>
+        <log4j.version>2.13.1</log4j.version>
+        <lombok.version>1.18.12</lombok.version>
+        <fst.version>2.57</fst.version>
+        <kryo.version>5.0.0-RC5</kryo.version>
+        <guava.version>28.2-jre</guava.version>
+        <jedis.version>2.9.3</jedis.version>
+        <junit.version>5.6.2</junit.version>
+        <ecplise-collection.version>10.2.0</ecplise-collection.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.13.1</version>
+            <version>${log4j.version}</version>
         </dependency>
 
         <!--   delete after finished   -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.12</version>
+            <version>${lombok.version}</version>
         </dependency>
 
         <!--json util-->
         <dependency>
             <groupId>de.ruedigermoeller</groupId>
             <artifactId>fst</artifactId>
-            <version>2.57</version>
+            <version>${fst.version}</version>
         </dependency>
-
         <dependency>
-            <groupId>com.esotericsoftware.kryo</groupId>
+            <groupId>com.esotericsoftware</groupId>
             <artifactId>kryo</artifactId>
-            <version>2.24.0</version>
+            <version>${kryo.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>28.2-jre</version>
+            <version>${guava.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.eclipse.collections</groupId>
             <artifactId>eclipse-collections</artifactId>
-            <version>10.2.0</version>
+            <version>${ecplise-collection.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.6.2</version>
+            <version>${junit.version}</version>
         </dependency>
 
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
-            <version>2.9.3</version>
+            <version>${jedis.version}</version>
         </dependency>
-
     </dependencies>
 
 </project>
