--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <java.version>11</java.version>
         <maven.compiler.target>11</maven.compiler.target>
         <maven.compiler.source>11</maven.compiler.source>
-        <log4j.version>2.14.0</log4j.version>
+        <logback.version>1.2.3</logback.version>
         <lombok.version>1.18.12</lombok.version>
         <fst.version>2.57</fst.version>
         <kryo.version>5.0.0-RC5</kryo.version>
@@ -25,9 +25,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.7.22</version>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
